# mapbox-gl-native

./: .gitmodules  CMakeLists.txt  circle.yml
benchmark/: CMakeLists.txt
metrics/binary-size/linux-clang8/: metrics.json
metrics/binary-size/linux-gcc8/: metrics.json
metrics/binary-size/macos-xcode11/: metrics.json
next/: CMakeLists.txt
next/platform/ios/: ios.cmake
next/test/: CMakeLists.txt
platform/android/MapboxGLAndroidSDKTestApp/: build.gradle
platform/darwin/src/: http_file_source.mm
platform/linux/: linux.cmake
platform/macos/: macos.cmake
render-test/: runner.cpp
render-test/android/app/: build.gradle  test.jks
src/: core-files.json
src/mbgl/layout/: symbol_instance.hpp  symbol_layout.cpp  symbol_layout.hpp
src/mbgl/programs/: symbol_program.hpp
src/mbgl/renderer/: paint_parameters.cpp  render_static_data.cpp  render_static_data.hpp  render_tile.cpp  renderer.cpp  renderer_impl.cpp
src/mbgl/renderer/buckets/: debug_bucket.cpp  raster_bucket.cpp  symbol_bucket.cpp  symbol_bucket.hpp
src/mbgl/renderer/layers/: render_background_layer.cpp  render_background_layer.hpp  render_circle_layer.cpp  render_custom_layer.cpp  render_fill_extrusion_layer.cpp  render_fill_layer.cpp  render_heatmap_layer.cpp  render_heatmap_layer.hpp  render_hillshade_layer.cpp  render_line_layer.cpp  render_raster_layer.cpp  render_symbol_layer.cpp
src/mbgl/renderer/sources/: render_image_source.cpp
src/mbgl/text/: cross_tile_symbol_index.cpp  placement.cpp  placement.hpp
test/: CMakeLists.txt  test-files.json
test/src/mbgl/test/: http_server.cpp
test/style/expression/: expression.test.cpp
test/text/: cross_tile_symbol_index.test.cpp  local_glyph_rasterizer.test.cpp
tools/: CMakeLists.txt
tools/cache/: CMakeLists.txt
tools/expression-test/: CMakeLists.txt
tools/map-shell/: CMakeLists.txt
tools/offline/: CMakeLists.txt
tools/render-test/: CMakeLists.txt  runner.cpp
tools/static/: CMakeLists.txt  static.cpp
